--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-* {
+/* * {
   box-sizing: border-box;
 }
 
@@ -8,4 +8,88 @@ html {
 
 body {
   font-size: 1.6rem;
+  font-family: "Roboto", sans-serif;
 }
+/* =============common============== */
+a {
+  text-decoration: none;
+}
+
+.main-content {
+  max-width: calc(100% - 48px);
+  width: 1170px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.btn {
+  display: block;
+  text-align: center;
+  min-width: 118px;
+  padding: 0 16px;
+  color: azure;
+  font-size: 1.6rem;
+  line-height: 50px;
+  font-weight: 600px;
+  border-radius: 24.5px;
+  background-color: #171100;
+}
+
+/* =============header============== */
+.header {
+  background-color: #fffcf4;
+}
+
+.header.fixed {
+  position: sticky;
+  top: -28px;
+}
+
+.header .body {
+  display: flex;
+  align-items: center;
+  padding: 36px 0px 8px;
+}
+
+.nav ul {
+  display: flex;
+}
+
+.nav {
+  margin-left: auto;
+}
+
+.nav a {
+  color: #5f5b53;
+  font-size: 1.6rem;
+  padding: 8px 21px;
+  position: relative;
+}
+
+.nav li.active a,
+.nav a:hover {
+  color: #171100;
+  /* font-weight: 600px; */
+  text-shadow: 0.5px 0px 0 currentColor;
+}
+
+.nav a:active {
+  color: plum;
+  /* font-weight: 100px; */
+}
+
+.nav li.active a::after {
+  display: block;
+  content: "";
+  width: 12px;
+  height: 2px;
+  border-radius: 1px;
+  background-color: #171100;
+  position: absolute;
+  left: 22px;
+  bottom: 6px;
+}
+
+.header .btn-sign-up {
+  min-width: 144px;
+} */
