--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -11,37 +11,72 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
-.btn {
-  padding: 0 16px;
-  color: aliceblue;
-  background-color: black;
-  min-width: 118px;
-  text-align: center;
-  border-radius: 24.5px;
-  line-height: 50px;
+:root {
+  --font-heading: "Sen", sans-serif;
+  --font-p: "Roboto", sans-serif;
+  --primary-color: #ffb900;
 }
-
-/* =======common======= */
+/* ===================================common=================================== */
 
 a {
   text-decoration: none;
 }
 
-.main.content {
+.main-content {
   width: 1170px;
   max-width: calc(100% - 48px);
   margin-left: auto;
   margin-right: auto;
 }
-/* =======head======= */
+
+.btn {
+  display: block;
+  padding: 0 16px;
+  color: aliceblue;
+  background-color: black;
+  line-height: 40px;
+  min-width: 114px;
+  text-align: center;
+  border-radius: 999px;
+}
+
+.btn:hover {
+  opacity: 0.9;
+}
+
+.heading-lv2 {
+  font-family: var(--font-heading);
+  font-weight: 700;
+  font-size: 3.8rem;
+  line-height: 1.27;
+  letter-spacing: -2%;
+}
+
+/* quá 1 dòng sẽ hiện dấu ... */
+.line-clamp {
+  display: -webkit-box;
+  -webkit-line-clamp: var(--line-clamp, 1);
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+.line-clamp.line-2 {
+  --line-clamp: 2;
+}
+
+.break-all {
+  word-break: break-all;
+}
+
+/* ===================================head=================================== */
 .header {
-  background-color: antiquewhite;
+  background-color: #fffcf4;
 }
 
 .header .body {
   display: flex;
   align-items: center;
-  padding: 36px 0 8px;
+  padding: 36px 0 20px;
 }
 
 .nav ul {
@@ -65,6 +100,12 @@ a {
   font-weight: 600;
 }
 
+.header .btn-sign-up,
+.nav a:active {
+  color: palevioletred;
+  text-shadow: 0.5px 0 0 currentColor;
+}
+
 .nav li.active a::after {
   display: inline-block;
   content: "";
@@ -77,15 +118,462 @@ a {
   bottom: 6px;
 }
 
-.header.btn-sign-up {
-  min-width: 144px;
+.header .btn-sign-up {
+  width: 14px;
 }
 
 .header.fixed {
   position: sticky;
   top: -28px;
+  z-index: 9999;
 }
 
 .header .action {
   margin-left: 49px;
+}
+
+/* ================================hero================================ */
+.hero {
+  padding: 45px 0 65px;
+  background-color: #fffcf4;
+}
+
+/* thuộc tính + sẽ tác động vào sau thuộc tính item nằm sau 1 item nằm trư  ớc */
+.hero-summary .item + .item {
+  margin-top: 22px;
+}
+
+.hero .body {
+  display: flex;
+}
+
+/* ===============================hero left=============================== */
+.hero .media-block {
+  width: 48%;
+  position: relative;
+}
+
+.hero .media-block .img {
+  width: 602px;
+  height: 685px;
+  object-fit: cover; /* ko bị vỡ ảnh */
+  border-radius: 28px;
+}
+
+.hero .hero-summary {
+  width: 278px;
+  padding: 24px;
+  position: absolute;
+  right: -120px;
+  bottom: 60px;
+  border-radius: 12px;
+  background: #fff;
+  box-shadow: 0px 16px 32px 0px rgba(0, 0, 0, 0.05);
+}
+
+.hero-summary .item {
+  display: flex;
+  align-items: center;
+}
+
+.hero-summary .icon {
+  border-radius: 50%;
+  width: 48px;
+  height: 48px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #fff9e8;
+}
+
+.hero-summary .icon2 {
+  background-color: #fcefff;
+}
+
+.hero-summary .icon3 {
+  background-color: #ebeaff;
+}
+
+.hero-summary .info {
+  margin-left: 16px;
+}
+
+.hero-summary .label {
+  color: #5f5b53;
+  font-size: 1.4rem;
+  line-height: 1.86;
+}
+
+.hero-summary .tittle {
+  color: #171100;
+  font-size: 1.8rem;
+  font-weight: 600;
+  line-height: 1.67; /* 166.667% */
+}
+
+/* ============================ hero right============================ */
+.hero .content-block {
+  width: 52%;
+  padding-left: 230px;
+  padding-top: 64px;
+}
+
+.hero .heading {
+  color: #171100;
+  font-family: var(--font-heading);
+  font-size: 4.1rem;
+  font-weight: 700;
+  line-height: 1.17; /* 117.241% */
+  letter-spacing: -1.16px;
+}
+
+.hero .content-block p {
+  margin-top: 28px;
+  color: #5f5b53;
+  font-size: 1.8rem;
+  line-height: 1.67; /* 166.667% */
+}
+
+.hero .cta-group {
+  display: flex;
+  margin-top: 38px;
+}
+
+.hero-cta {
+  min-width: 180px;
+  line-height: 64px;
+  background-color: var(--primary-color);
+}
+
+.hero .watch-video {
+  border: none;
+  background: transparent;
+  cursor: pointer;
+}
+
+.hero .icon {
+  display: flex;
+  align-items: center;
+  margin-left: 28px;
+}
+
+.hero .watch-video .icon img {
+  border-radius: 40px;
+  padding: 10px;
+  background: #fff;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.07);
+}
+
+.hero .icon span {
+  margin-left: 14px;
+  align-items: center;
+  color: #171100;
+  font-size: 1.8rem;
+  font-weight: 600;
+  line-height: 1.67; /* 166.667% */
+}
+
+.hero .desc-recent {
+  margin-top: 48px;
+}
+
+.hero .stats strong {
+  margin-right: 15px;
+  color: #171100;
+  font-size: 4.4rem;
+  font-weight: 700;
+  line-height: 1.23px; /* 122.727% */
+}
+
+.hero .stats strong:nth-child(2) {
+  margin-left: 28px;
+}
+
+/* ============================popular============================ */
+.popular {
+  padding: 65px 0;
+}
+
+.popular-top .desc {
+  margin-top: 16px;
+  width: 458px;
+  font-family: var(--font-p);
+  font-weight: 400;
+  font-size: 1.8rem;
+  line-height: 1.67;
+}
+
+.popular .popular-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.popular .controls {
+  display: flex;
+  gap: 18px;
+}
+.popular-top .controlss {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: transparent;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: 1px solid var(--primary-color);
+  cursor: pointer;
+}
+
+.popular-top .control-btn2 {
+  background-color: #ffb900;
+}
+
+.popular-top .controlss:hover {
+  background: palevioletred;
+}
+
+/* ============================courses============================ */
+.courses-list {
+  margin-top: 55px;
+  display: flex;
+}
+
+.courses-item .thumb {
+  width: 370px;
+  height: 278px;
+  object-fit: cover;
+}
+
+.courses-item .head {
+  margin-top: 16px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.courses-item .title a {
+  color: #171100;
+  font-size: 1.8rem;
+  font-weight: 600;
+  line-height: 1.67; /* 166.667% */
+}
+
+.courses-item .rating .star {
+  width: 18px;
+  height: 18px;
+}
+
+.courses-item .rating span {
+  color: #fea31b;
+  font-size: 1.6rem;
+  font-weight: 400;
+  line-height: 1.75; /* 175% */
+}
+
+.popular .courses-item {
+  flex: 1;
+}
+
+.courses-item p {
+  margin: 6px 0;
+  width: 326px;
+  height: 52px;
+  color: #5f5b53;
+  font-size: 1.6rem;
+  font-weight: 400;
+  line-height: 1.86; /* 185.714% */
+}
+
+.courses-list .foot {
+  margin-top: 22px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.courses-list .foot span {
+  color: #171100;
+  font-size: 1.8rem;
+  font-weight: 600;
+  line-height: 1.67; /* 166.667% */
+}
+
+.courses-list .foot .btn {
+  width: 118px;
+  height: 50px;
+  border-radius: 25px;
+  border: 1px solid #e2dfda;
+}
+
+.courses-list .foot .btn:hover {
+  background-color: var(--primary-color);
+  cursor: pointer;
+}
+
+.courses-list .info {
+  margin: 22px;
+}
+
+.courses-list .courses-item + .courses-item {
+  margin-left: 30px;
+}
+
+.courses-list .courses-item {
+  border-radius: 12px;
+  border: 1px solid #e2dfda;
+  background: #fff;
+}
+
+.courses-list .courses-item:hover {
+  box-shadow: 0px 18px 36px 0px rgba(0, 0, 0, 0.05);
+}
+
+/* ============================ feedback ============================ */
+.feedback {
+  margin-top: 135px;
+  padding: 96px 0;
+  background-color: #2e2100;
+}
+
+.feedback-item {
+  display: flex;
+  justify-content: space-between;
+  /* align-items: center; */
+}
+
+.feedback-item {
+  color: white;
+}
+
+.feedback-item .info {
+  width: 72px;
+  height: 72px;
+  border-radius: 72px;
+}
+
+.feedback-item .desc1 {
+  margin-top: 18px;
+  width: 130px;
+  font-size: 2.4rem;
+  font-family: var(--font-heading);
+  font-weight: 700;
+  line-height: 1.42; /* 141.667% */
+}
+
+.feedback-item .desc2 {
+  margin-top: 4px;
+  color: #bfbcb2;
+  width: 159px;
+  font-size: 1.4rem;
+  font-family: var(--font-p);
+  font-weight: 400;
+  line-height: 1.86; /* 185.714% */
+}
+
+.feedback-item .info .dots {
+  margin-top: 28px;
+  display: flex;
+  gap: 6px;
+}
+
+.feedback-item .dot {
+  height: 6px;
+  width: 6px;
+  border-radius: 50%;
+  background-color: #634700;
+  cursor: pointer;
+}
+
+.feedback-item .dot2 {
+  background-color: #ffb900;
+  cursor: default;
+}
+
+.feedback-item .content {
+  margin-left: 271px;
+}
+
+.feedback-item blockquote {
+  font-family: var(--font-heading);
+  width: 740px;
+  font-size: 2.6rem;
+  font-style: italic;
+  font-weight: 400;
+  line-height: 1.54; /* 153.846% */
+}
+
+/* ============================ features ============================ */
+
+.features {
+  margin-top: 135px;
+  padding: 65px 0;
+}
+
+.features .body {
+  display: flex;
+}
+
+.features .imgages {
+  display: flex;
+}
+
+.features .imgages .picture {
+  width: 270px;
+  height: 404px;
+  border-radius: 16px;
+  object-fit: cover;
+}
+
+.features .imgages .picture1 {
+  margin-right: 30px;
+  margin-top: 34px;
+}
+
+.features .imgages .picture2 {
+  margin-top: 10px;
+}
+
+.features .content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 41%;
+  margin-left: 130px;
+}
+
+.features .content .head-top {
+  color: #171100;
+  font-family: var(--font-heading);
+  font-size: 3.8rem;
+  font-weight: 700;
+  line-height: 1.27; /* 126.316% */
+  letter-spacing: -0.76px;
+}
+
+.features .content .desc1 {
+  margin-top: 16px;
+  width: 458px;
+  color: #5f5b53;
+  font-size: 1.6rem;
+  font-weight: 400;
+  line-height: 1.75; /* 175% */
+}
+
+.features .content .desc2 {
+  color: #5f5b53;
+  margin-top: 16px;
+  font-size: 1.6rem;
+  font-weight: 400;
+  line-height: 1.75; /* 175% */
+}
+
+.features .content .btn-sign {
+  margin-top: 32px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 137px;
+  height: 50px;
+  border-radius: 2.6rem;
+  background: #ffb900;
 }
